Fix the vertical alignment
Error was in the declaration of classes...

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -18,7 +18,8 @@ body {
   align-items: center;
 }
 
-.left .right {
+.left,
+.right {
   display: flex;
   justify-content: space-evenly;
   gap: 16px;
